--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter_bloc: ^0.20.0
   equatable: ^0.2.6
   flutter_dotenv: ^2.0.1
-  location: 
+  location: 1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
